--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -1,4 +1,4 @@
-database.partitionCount=${database.partitionCount}
+#database.partitionCount=${database.partitionCount}
 
 #dataanalysis数据库
 database.driverClassName=${database.driverClassName}
