--- a/pom.xml
+++ b/pom.xml
@@ -319,6 +319,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.googlecode.xmemcached</groupId>
+			<artifactId>xmemcached</artifactId>
+			<version>1.3.5</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
 			<version>${spring.version}</version>
