--- a/src/main/resources/META-INF/spring/dataanalysis.properties
+++ b/src/main/resources/META-INF/spring/dataanalysis.properties
@@ -12,6 +12,7 @@ baijiaoupei=${baijiaoupei}
 peiluall=${peiluall}
 todaybifeng=${todaybifeng}
 detailResultDate=${detailResultDate}
+peiLvDetail=${peiLvDetail}
 #竞彩篮球
 leagueJclUrl=${leagueJclUrl}
 matchResultJclUrl=${matchResultJclUrl}
