--- a/src/main/resources/META-INF/spring/dataanalysis.properties
+++ b/src/main/resources/META-INF/spring/dataanalysis.properties
@@ -1,3 +1,5 @@
+#dataanalysis部署机器的ip
+dataanalysisIp=${dataanalysisIp}
 #memcache,jms
 jms.brokerURL=${jms.brokerURL}
 jms.lottery.brokerURL=${jms.lottery.brokerURL}
