--- a/src/main/resources/META-INF/spring/dataanalysis.properties
+++ b/src/main/resources/META-INF/spring/dataanalysis.properties
@@ -25,3 +25,5 @@ teamJclUrl=${teamJclUrl}
 #新闻
 jingCaiNewsUrl=${jingCaiNewsUrl}
 jingCaiZuQiuUrl=${jingCaiZuQiuUrl}
+#后台url
+lotteryUrl=${lotteryUrl}
