--- a/pom.xml
+++ b/pom.xml
@@ -432,6 +432,11 @@
 			<version>2.3</version>
 			<classifier>jdk15</classifier>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.ezmorph</groupId>
+			<artifactId>ezmorph</artifactId>
+			<version>1.0.6</version>
+		</dependency>
 	</dependencies>
     <build>
     	<finalName>dataanalysis</finalName>
