--- a/src/main/resources/META-INF/spring/dataanalysis.properties
+++ b/src/main/resources/META-INF/spring/dataanalysis.properties
@@ -9,6 +9,7 @@ liansaibeisai=${liansaibeisai}
 qiuduiziliao=${qiuduiziliao}
 qiutanmatches=${qiutanmatches}
 saichensaiguo=${saichensaiguo}
+scheduleById=${scheduleById}
 detailresult=${detailresult}
 baijiaoupei=${baijiaoupei}
 peiluall=${peiluall}
