--- a/pom.xml
+++ b/pom.xml
@@ -438,11 +438,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.18</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.ruyicai</groupId>
 			<artifactId>cache</artifactId>
 			<version>0.0.1</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.opensymphony.quartz</groupId>
 			<artifactId>quartz-all</artifactId>
