--- a/pom.xml
+++ b/pom.xml
@@ -630,10 +630,10 @@
 				<database.username>jrtConsole</database.username>
 				<database.password>jrtConsole</database.password>
 				<!-- news数据库 -->
-				<news.database.driverClassName>com.mysql.jdbc.Driver</news.database.driverClassName>
+				<!-- <news.database.driverClassName>com.mysql.jdbc.Driver</news.database.driverClassName>
 				<news.database.url>jdbc:mysql://192.168.0.92:3306/news?characterEncoding=utf-8</news.database.url>
 				<news.database.username>jrtConsole</news.database.username>
-				<news.database.password>jrtConsole</news.database.password>
+				<news.database.password>jrtConsole</news.database.password> -->
 				<logback.appender>STDOUT</logback.appender>
 				<dataanalysisIp>http://127.0.0.1:8000</dataanalysisIp>
 				<memcache.client.ip>192.168.0.92:12000</memcache.client.ip>
@@ -654,10 +654,10 @@
 				<database.username>jrtConsole</database.username>
 				<database.password>jrtConsole</database.password>
 				<!-- news数据库 -->
-				<news.database.driverClassName>com.mysql.jdbc.Driver</news.database.driverClassName>
+				<!-- <news.database.driverClassName>com.mysql.jdbc.Driver</news.database.driverClassName>
 				<news.database.url>jdbc:mysql://192.168.0.92:3306/news?characterEncoding=utf-8</news.database.url>
 				<news.database.username>jrtConsole</news.database.username>
-				<news.database.password>jrtConsole</news.database.password>
+				<news.database.password>jrtConsole</news.database.password> -->
 				<logback.appender>dataanalysisLog</logback.appender>
 				<dataanalysisIp>http://192.168.0.42:80</dataanalysisIp>
 				<memcache.client.ip>192.168.0.92:12000</memcache.client.ip>
@@ -678,10 +678,10 @@
 				<database.username>jrtConsole</database.username>
 				<database.password>jrtConsole</database.password>
 				<!-- news数据库 -->
-				<news.database.url>jdbc:mysql://192.168.99.120:3306/news?characterEncoding=utf-8</news.database.url>
+				<!-- <news.database.url>jdbc:mysql://192.168.99.120:3306/news?characterEncoding=utf-8</news.database.url>
 				<news.database.driverClassName>com.mysql.jdbc.Driver</news.database.driverClassName>
 				<news.database.username>jrtConsole</news.database.username>
-				<news.database.password>jrtConsole</news.database.password>
+				<news.database.password>jrtConsole</news.database.password> -->
 				<logback.appender>dataanalysisLog</logback.appender>
 				<dataanalysisIp>http://192.168.99.9:8080,http://192.168.99.17:8081</dataanalysisIp>
 				<memcache.client.ip>192.168.99.16:12000,192.168.99.17:12000</memcache.client.ip>
