--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -5,7 +5,7 @@ database.username=${database.username}
 database.password=${database.password}
 
 #news数据库
-news.database.driverClassName=${news.database.driverClassName}
-news.database.url=${news.database.url}
-news.database.username=${news.database.username}
-news.database.password=${news.database.password}
+#news.database.driverClassName=${news.database.driverClassName}
+#news.database.url=${news.database.url}
+#news.database.username=${news.database.username}
+#news.database.password=${news.database.password}
