--- a/pom.xml
+++ b/pom.xml
@@ -637,6 +637,7 @@
 				<!-- 后台url -->
 				<lotteryUrl>http://192.168.0.42:8080/lottery/</lotteryUrl>
 				<analyzeUrl>http://192.168.0.42/analyze/</analyzeUrl>
+				<imageUrl>http://client.ruyicai.com/xiazai/</imageUrl>
 			</properties>
 		</profile>
 		
@@ -657,6 +658,7 @@
 				<!-- 后台url -->
 				<lotteryUrl>http://192.168.0.42:8080/lottery/</lotteryUrl>
 				<analyzeUrl>http://192.168.0.42/analyze/</analyzeUrl>
+				<imageUrl>http://client.ruyicai.com/xiazai/</imageUrl>
 			</properties>
 		</profile>
 
@@ -677,6 +679,7 @@
 				<!-- 后台url -->
 				<lotteryUrl>http://192.168.99.6/lottery/</lotteryUrl>
 				<analyzeUrl></analyzeUrl>
+				<imageUrl>http://client.ruyicai.com/xiazai/</imageUrl>
 			</properties>
 		</profile>
 	</profiles>
