--- a/pom.xml
+++ b/pom.xml
@@ -637,7 +637,7 @@
 				<!-- 后台url -->
 				<lotteryUrl>http://192.168.0.42:8080/lottery/</lotteryUrl>
 				<analyzeUrl>http://192.168.0.42/analyze/</analyzeUrl>
-				<imageUrl>http://client.ruyicai.com/xiazai/</imageUrl>
+				<imageUrl>http://client.ruyicai.com/xiazai/dataanalysis/image/</imageUrl>
 			</properties>
 		</profile>
 		
@@ -658,7 +658,7 @@
 				<!-- 后台url -->
 				<lotteryUrl>http://192.168.0.42:8080/lottery/</lotteryUrl>
 				<analyzeUrl>http://192.168.0.42/analyze/</analyzeUrl>
-				<imageUrl>http://client.ruyicai.com/xiazai/</imageUrl>
+				<imageUrl>http://client.ruyicai.com/xiazai/dataanalysis/image/</imageUrl>
 			</properties>
 		</profile>
 
@@ -679,7 +679,7 @@
 				<!-- 后台url -->
 				<lotteryUrl>http://192.168.99.6/lottery/</lotteryUrl>
 				<analyzeUrl></analyzeUrl>
-				<imageUrl>http://client.ruyicai.com/xiazai/</imageUrl>
+				<imageUrl>http://client.ruyicai.com/xiazai/dataanalysis/image/</imageUrl>
 			</properties>
 		</profile>
 	</profiles>
