--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<todaybifeng>http://dxbf.bet007.com/vbsxml/bfdata.js</todaybifeng>
 		<detailResultDate>http://dxbf.bet007.com/Event_XML.aspx</detailResultDate>
 		<peiLvDetail>http://vip.bet007.com/xmlvbs/ch_odds.xml</peiLvDetail>
+		<technicCountUrl>http://bf.bet007.com/Technic_XML.aspx</technicCountUrl>
 		<!-- 篮球 -->
 		<leagueJclUrl>http://dxbf.bet007.com/LqLeague_Xml.aspx</leagueJclUrl>
 		<matchResultJclUrl>http://dxbf.bet007.com/nba_date.aspx</matchResultJclUrl>
