--- a/src/main/resources/META-INF/spring/dataanalysis.properties
+++ b/src/main/resources/META-INF/spring/dataanalysis.properties
@@ -3,7 +3,7 @@ dataanalysisIp=${dataanalysisIp}
 jms.brokerURL=${jms.brokerURL}
 jms.lottery.brokerURL=${jms.lottery.brokerURL}
 memcache.client.ip=${memcache.client.ip}
-êÉ
+
 liansaibeisai=${liansaibeisai}
 qiuduiziliao=${qiuduiziliao}
 qiutanmatches=${qiutanmatches}
@@ -15,7 +15,8 @@ peiluall=${peiluall}
 todaybifeng=${todaybifeng}
 detailResultDate=${detailResultDate}
 peiLvDetail=${peiLvDetail}
-êÉ
+technicCountUrl=${technicCountUrl}
+
 leagueJclUrl=${leagueJclUrl}
 matchResultJclUrl=${matchResultJclUrl}
 todayScoreJclUrl=${todayScoreJclUrl}
