--- a/pom.xml
+++ b/pom.xml
@@ -415,10 +415,15 @@
 		</dependency>
 		<!-- <dependency> <groupId>com.ruyicai</groupId> <artifactId>cache</artifactId> 
 			<version>0.0.1</version> </dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.opensymphony.quartz</groupId> -->
+<!-- 			<artifactId>quartz-all</artifactId> -->
+<!-- 			<version>1.6.1</version> -->
+<!-- 		</dependency> -->
 		<dependency>
-			<groupId>org.opensymphony.quartz</groupId>
-			<artifactId>quartz-all</artifactId>
-			<version>1.6.1</version>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>1.7.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jsoup</groupId>
