--- a/src/main/resources/META-INF/spring/dataanalysis.properties
+++ b/src/main/resources/META-INF/spring/dataanalysis.properties
@@ -23,6 +23,7 @@ todayScoreJclUrl=${todayScoreJclUrl}
 standardJclUrl=${standardJclUrl}
 peiLvJclUrl=${peiLvJclUrl}
 teamJclUrl=${teamJclUrl}
+technicCountJclUrl=${technicCountJclUrl}
 
 jingCaiNewsUrl=${jingCaiNewsUrl}
 jingCaiZuQiuUrl=${jingCaiZuQiuUrl}
